# ECM1400-Battleships-Coursework

./: README.md  battleships.txt  components.py  conf.py  game_engine.py  license.txt  main.py  mp_game_engine.py  placement.json  pyproject.toml  setup.py  test_report.txt
Battleships/: components.py  main.py
battleships/: components.py  game_engine.py  main.py  mp_game_engine.py
battleships/docs/: conf.py  index.rst
battleships/tests/: test_components.py  test_functionality.py
battleships_pgk_jworley.egg-info/: PKG-INFO  SOURCES.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: battleships.doctree  battleships.tests.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  battleships.html  battleships.tests.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: battleships.rst.txt  battleships.tests.rst.txt
tests/: test_components.py
