[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "battleships-pgk-jworley"
version = "0.0.2"
authors = [
  { name="James Worley", email="jw1412@exeter.ac.uk" },
]
description = "A game of Battleships in Python for ECM1400 Coursework."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/W3r5l3y/ECM1400-Battleships-Coursework"